--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,64 @@
   <script src="script.js" type="module"></script>
   <title>r-post</title>
 </head>
+
 <body>
   <div class="p-4">
-    Initial setup completed.
+    <form>
+      <div class="input-group mb-4">
+        <select name="form-select glex-grow-o w-auto">
+          <option value="GET" selected>GET</option>
+          <option value="GET">POST</option>
+          <option value="GET">PUT</option>
+          <option value="GET">PATCH</option>
+          <option value="GET">DELETE</option>
+        </select>
+        <input required class="form-control" type="url" placeholder="https://example.com" />
+        <button type="submit" class="btn btn-primary">Send</button>
+      </div>
+
+      <ul class="nav nav-tabs" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="query-params-tab" data-bs-toggle="tab" data-bs-target="#query-params" type="button" role="tab" aria-controls="query-params" aria-selected="true">Query Params</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="request-headers-tab" data-bs-toggle="tab" data-bs-target="#request-headers" type="button" role="tab" aria-controls="request-headers" aria-selected="false">Headers</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="json-tab" data-bs-toggle="tab" data-bs-target="#json" type="button" role="tab" aria-controls="json" aria-selected="false">JSON</button>
+        </li>
+      </ul>
+
+      <div class="tab-content p-3 border-top-0 border">
+        <div class="tab-pane fade show active" id="query-params"
+          role="tabpanel" aria-labelledby="query-params-tab">
+        <div data-query-params></div>
+        <button data-add-query-param-btn class="mt-2 btn btn-outline-success">Add P</button>
+        </div>
+
+        <div class="tab-pane fade" id="request-headers"
+          role="tabpanel" aria-labelledby="request-headers-tab">
+        <div data-request-headers></div>
+        <button data-add-request-header-btn class="mt-2 btn btn-outline-success">Add H</button>
+        </div>
+
+        <div class="tab-pane fade" id="json"
+          role="tabpanel" aria-labelledby="json-tab">
+        <div data-json-request-body class="overflow-auto" style="max-height: 200px;"></div>
+      </div>
+    </div>
+    </form>
   </div>
+
+
+  <template data-key-value-template>
+    <div class="input-group my-2" data-key-value-pair>
+      <input type="text" data-key class="form-control" placeholder="Key" />
+      <input type="text" data-value class="form-control" placeholder="Value" />
+      <button type="button" data-remove-btn class="btn btn-outline-danger">Remove</button>
+    </div>
+  </template>
+
 </body>
+
 </html>
