Fixed a bug where classes were given inside a name parameter.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="p-4">
     <form data-form>
       <div class="input-group mb-4">
-        <select name="form-select glex-grow-o w-auto" data-method>
+        <select class="form-select flex-grow-0 w-auto" data-method>
           <option value="GET" selected>GET</option>
           <option value="GET">POST</option>
           <option value="GET">PUT</option>
