--- a/index.html
+++ b/index.html
@@ -38,24 +38,57 @@
       </ul>
 
       <div class="tab-content p-3 border-top-0 border">
-        <div class="tab-pane fade show active" id="query-params"
-          role="tabpanel" aria-labelledby="query-params-tab">
-        <div data-query-params></div>
-        <button data-add-query-param-btn class="mt-2 btn btn-outline-success">Add P</button>
+        <div class="tab-pane fade show active" id="query-params" role="tabpanel" aria-labelledby="query-params-tab">
+          <div data-query-params></div>
+          <button data-add-query-param-btn class="mt-2 btn btn-outline-success">+</button>
         </div>
 
-        <div class="tab-pane fade" id="request-headers"
-          role="tabpanel" aria-labelledby="request-headers-tab">
-        <div data-request-headers></div>
-        <button data-add-request-header-btn class="mt-2 btn btn-outline-success">Add H</button>
+        <div class="tab-pane fade" id="request-headers" role="tabpanel" aria-labelledby="request-headers-tab">
+          <div data-request-headers></div>
+          <button data-add-request-header-btn class="mt-2 btn btn-outline-success">+</button>
         </div>
 
-        <div class="tab-pane fade" id="json"
-          role="tabpanel" aria-labelledby="json-tab">
-        <div data-json-request-body class="overflow-auto" style="max-height: 200px;"></div>
+        <div class="tab-pane fade" id="json" role="tabpanel" aria-labelledby="json-tab">
+          <div data-json-request-body class="overflow-auto" style="max-height: 200px;"></div>
+        </div>
       </div>
-    </div>
     </form>
+
+    <div class="mt-5 d-none" data-response-selection>
+      <h3>Response</h3>
+      <div class="d-flex my-2">
+        <div class="me-3">
+          Status: <span data-status></span>
+        </div>
+        <div class="me-3">
+          Time: <span data-time></span>ms
+        </div>
+        <div class="me-3">
+          Size: <span data-size></span>
+        </div>
+      </div>
+
+      <ul class="nav nav-tabs" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="body-tab" data-bs-toggle="tab" data-bs-target="#body" type="button" role="tab" aria-controls="body" aria-selected="true">Body</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="response-headers-tab" data-bs-toggle="tab" data-bs-target="#response-headers" type="button" role="tab" aria-controls="response-headers" aria-selected="false">Headers</button>
+        </li>
+      </ul>
+
+      <div class="tab-content p-3 border-top-0 border">
+        <div class="tab-pane fade show active" id="body" role="tabpanel" aria-labelledby="body-tab">
+          <div data-json-response-body class="overflow-auto" style="max-height: 200px;"></div>
+        </div>
+
+        <div class="tab-pane fade" id="response-headers" role="tabpanel" aria-labelledby="response-headers-tab">
+          <div style="display: grid; grid-template-columns: auto 1fr; gap: 0.5rem 2rem;" data-response-headers></div>
+        </div>
+      </div>
+
+
+    </div>
   </div>
 
 
@@ -63,7 +96,7 @@
     <div class="input-group my-2" data-key-value-pair>
       <input type="text" data-key class="form-control" placeholder="Key" />
       <input type="text" data-value class="form-control" placeholder="Value" />
-      <button type="button" data-remove-btn class="btn btn-outline-danger">Remove</button>
+      <button type="button" data-remove-btn class="btn btn-outline-danger">&times</button>
     </div>
   </template>
 
