Created headers response script

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </form>
 
-    <div class="mt-5 d-none" data-response-selection>
+    <div class="mt-5 d-none" data-response-section>
       <h3>Response</h3>
       <div class="d-flex my-2">
         <div class="me-3">
