Altered app "logo"

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <link href="https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap" rel="stylesheet">
+
   <script src="script.js" type="module"></script>
   <title>r-post</title>
 </head>
 
 <body>
   <div class="p-4">
+    <h2 class="d-flex justify-content-center mb-4" style="font-family: 'Kirang Haerang', cursive; font-size: 4rem">r-post</h2>
     <form data-form>
       <div class="input-group mb-4">
         <select class="form-select flex-grow-0 w-auto" data-method>
